# OpenTaiko-Hub

./: .gitignore  CHANGELOG.md  CREDITS.md  LICENSE  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
.github/workflows/: autobuild.yaml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  fetch.json  fs.json  upload.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/components/: AssetStatusCell.svelte  AudioPlayer.svelte  HubVersionCheck.svelte  Secret.svelte  SecretButton.svelte  SongDifficultyChip.svelte  ToolCard.svelte  VersionNumberChip.svelte
src/lib/i18n/: en.json  index.js  ja.json  zh-Hans.json  zh-Hant.json
src/lib/pages/: AssetsTab.svelte  InformationTab.svelte  LinksTab.svelte  SecretTab.svelte  SongsTab.svelte  ThemesTab.svelte  ToolsTab.svelte
src/lib/utils/: path.js
src/routes/: +layout.js  +layout.svelte  +page.svelte
