[package]
name = "OpenTaiko-Hub"
version = "0.1.0"
description = "Update manager and launcher for OpenTaiko"
authors = ["OpenTaiko Team"]
license = ""
repository = ""
default-run = "OpenTaiko-Hub"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=2.0.0-rc.10", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "=2.0.0-rc.10", features = [ ] }
tauri-plugin-http = "2.0.0-rc.0"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-upload = "2.0.0-rc"
zip = "2.2.0"
tokio = "1.40.0"
tauri-plugin-os = "2.0.0-rc"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
