[package]
name = "OpenTaiko-Hub"
version = "0.1.0"
description = "Update manager and launcher for OpenTaiko"
authors = ["OpenTaiko Team"]
license = ""
repository = ""
default-run = "OpenTaiko-Hub"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "~2.10.3", features = [ ] }
tauri-plugin-fs = "~2.5.0"
tauri-plugin-http = "~2.5.8"
tauri-plugin-opener = "~2.5.3"
tauri-plugin-os = "~2.3.2"
tauri-plugin-shell = "~2.3.5"
tauri-plugin-store = "~2.4.2"
tauri-plugin-upload = "~2.4.0"
zip = "4.2.0"
tokio = "1.51.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
